[tool.poetry]
name = "diffusion-posterior-sampling"
version = "0.1.0"
description = "A reimplementation of \"Diffusion Posterior Sampling for Noisy Inverse problems\""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
polars = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
