[tool.poetry]
name = "diffusion-posterior-sampling"
version = "0.1.0"
description = "A reimplementation of \"Diffusion Posterior Sampling for Noisy Inverse problems\""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "models" },
    { include = "guided_diffusion" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
polars = "^1.12.0"
blobfile = "^3.0.0"
mpi4py = "^4.0.1"
pyyaml = "^6.0.2"
scipy = "^1.14.1"
huggingface-hub = "^0.26.3"
datasets = "^3.1.0"
lpips = "^0.1.4"
pytorch-fid = "^0.3.0"
opencv-python = "^4.10.0.84"
ignite = "^1.1.0"
pytorch-ignite = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

